--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/BCSBruh/GataRealEstate#readme",
   "dependencies": {
-    "node": "^21.1.0"
+    "node": "^21.1.0",
+    "react": "^18.2.0"
   }
 }
